<resources>
    <string name="app_name">Gym Social App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="welcome_text">Welcome to Gym Buddy!</string>
    <string name="welcome_subtext">Please Log In:</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up_text">Not a member?</string>
    <string name="sign_up_button_txt">Sign Up!</string>
    <string name="userPasswdKV">com.cs407.gymsocialapp.userPasswdKV</string>
    <!-- Strings related to sign up -->
    <string name="sign_up_subtext">Create an account:</string>
    <string name="first_name">Enter first name:</string>
    <string name="last_name">Enter last name:</string>
    <string name="email_text">Enter email:</string>
    <string name="email_confirm">Confirm email:</string>
    <string name="username_text">Create username:</string>
    <string name="password_text">Create password:</string>
    <string name="password_confirm">Confirm password:</string>
    <string name="create_account_text">Sign Up</string>
    <string name="log_in_txt">Already a member?</string>
    <string name="log_in_button_txt">Back to login screen</string>
    <!-- Strings related to profile screen -->
    <string name="profile_username_txt">Username</string>
    <string name="post_streak_txt">🔥Streak: 0</string>
    <string name="followers_txt">0 Followers</string>
    <string name="following_txt">0 Following</string>
    <string name="b_edit_prof_txt">Edit Profile</string>
    <string name="b_home_txt">Home</string>
    <string name="b_create_post_txt">+</string>
    <string name="b_mygymbuds_txt">MyGymBuds</string>
    <string name="profile_image">Profile Image</string>
    <string name="settings">Settings</string>
    <!-- Strings related to workout screen -->
    <string name="record_workout_txt">Record Workout</string>
    <string name="b_add_set_txt">+ Set</string>
    <string name="workout_title_txt">Workout:</string>
    <string name="input_workout_title_txt">Title:</string>
    <string name="input_workout_desc_txt">Description:</string>
    <string name="b_post_workout_txt">Post</string>
    <string name="b_back_workout_txt">Back</string>
    <string name="b_add_pic_txt">+Photo</string>
    <!-- Strings related to item_workout screen -->
    <string name="workout_name_txt">Workout Name:</string>
    <string name="sets_x_reps_txt">Sets X RepsL</string>
    <string name="weight_txt">Weight:</string>
    <!-- Strings related to Home Screen -->
    <string name="search">Search</string>
    <string name="motivational_image_desc">Motivational Image</string>
    <string name="search_usernames">Search usernames</string>
    <string name="following">Following</string>
    <string name="your_workouts">Your Workouts</string>
    <!-- Strings related to Settings Screen -->
    <string name="settingsText">Settings</string>
    <string name="settingsSubText">Edit Account Information:</string>
    <string name="changeUsernameButton">Change Username</string>
    <string name="changeEmailButton">Change Email</string>
    <string name="ChangeNameButton">Change Name</string>
    <string name="ChangePasswordButton">Change Password</string>
    <string name="EditFirst">Enter new First Name</string>
    <string name="EditLast">Enter new Last Name</string>
    <string name="SubmitButton">Submit</string>
    <string name ="EditEmail">Enter new Email</string>
    <string name="ConfirmEditEmail">Confirm new Email</string>
    <string name="EditUsername">Enter new Username</string>
    <string name="ConfirmEditUsername">Confirm new Username</string>
    <string name="OldPassword">Enter current Password</string>
    <string name="EditPassword">Enter new Password</string>
    <string name="ConfirmEditPassword">Confirm new Password</string>
    <string name="cancelButton">Cancel</string>
    <string name="backButton">Back</string>
    <string name="logoutButton">Log Out</string>

</resources>