<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|fill_vertical"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:id="@+id/signup_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/signup_sub_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_subtext"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/firstName_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="text"
            android:paddingTop="50sp" />

        <EditText
            android:id="@+id/lastName_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="text"
            android:paddingTop="20sp" />

        <EditText
            android:id="@+id/email_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email_text"
            android:inputType="text"
            android:paddingTop="30sp" />

        <EditText
            android:id="@+id/email_confirm_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email_confirm"
            android:inputType="text"
            android:paddingTop="20sp" />

        <EditText
            android:id="@+id/username_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/username_text"
            android:inputType="text"
            android:paddingTop="30sp" />

        <EditText
            android:id="@+id/password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password_text"
            android:inputType="textPassword"
            android:paddingTop="30sp" />

        <EditText
            android:id="@+id/password_confirm_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password_confirm"
            android:inputType="textPassword"
            android:paddingTop="20sp" />

        <Button
            android:id="@+id/create_account_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account_text"
            android:translationY="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="89dp"
            android:orientation="horizontal"
            android:translationY="30sp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/log_in_txt"
                android:textSize="16sp"
                android:translationY="20dp" />

            <Button
                android:id="@+id/to_log_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/log_in_button_txt"
                android:translationY="20dp" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>