<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:src="@drawable/baseline_settings_24" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/settingsText"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settingsSubText"
            android:textSize="20sp" />

        <Button
            android:id="@+id/changeNameButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/ChangeNameButton" />

        <EditText
            android:id="@+id/editTextFirst"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/EditFirst"
            android:inputType="text"
            android:visibility="gone" />

        <EditText
            android:id="@+id/editTextLast"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/EditLast"
            android:inputType="text"
            android:visibility="gone" />

        <Button
            android:id="@+id/changeEmailButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/changeEmailButton" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/EditEmail"
            android:inputType="text"
            android:visibility="gone" />

        <EditText
            android:id="@+id/editTextConfirmEmail"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/ConfirmEditEmail"
            android:inputType="text"
            android:visibility="gone" />

        <Button
            android:id="@+id/changeUserButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/changeUsernameButton" />

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/EditUsername"
            android:inputType="text"
            android:visibility="gone" />

        <EditText
            android:id="@+id/editTextConfirmUsername"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/ConfirmEditEmail"
            android:inputType="text"
            android:visibility="gone" />

        <Button
            android:id="@+id/changePasswordButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ChangePasswordButton" />

        <EditText
            android:id="@+id/editTextOldPassword"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/OldPassword"
            android:inputType="text"
            android:visibility="gone" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/EditPassword"
            android:inputType="text"
            android:visibility="gone" />

        <EditText
            android:id="@+id/editTextConfirmPassword"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/ConfirmEditPassword"
            android:inputType="text"
            android:visibility="gone" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/SubmitButton" />

    </LinearLayout>
</FrameLayout>