<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddWorkoutScreen">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Record Workout Text and Add Set Button -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/record_workout_txt"
                android:textSize="32sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/b_add_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b_add_set_txt"
                android:textSize="20sp"
                android:layout_marginStart="8dp" />
        </LinearLayout>

        <!-- set List Container -->
        <LinearLayout
            android:id="@+id/set_list_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginTop="16dp">
            <!-- sets will be added here -->
        </LinearLayout>

        <!-- Workout Title, Description, Post and Back Button -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/workout_title_txt" />

            <EditText
                android:id="@+id/edit_workout_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_workout_title_txt"
                android:minHeight="48dp"/>

            <EditText
                android:id="@+id/edit_workout_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_workout_desc_txt"
                android:layout_marginTop="8dp"
                android:gravity="top"
                android:minHeight="100dp" />

            <Button
                android:id="@+id/b_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/b_post_workout_txt"
                android:layout_gravity="end"
                android:layout_marginTop="8dp" />

            <Button
                android:id="@+id/b_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/b_back_workout_txt"
                android:layout_gravity="end"
                android:layout_marginTop="8dp" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>